# DFT-Parallel-Computation

./: README.md
p3/: CMakeLists.txt
p3/src/: complex.cc  complex.cu  complex.cuh  cuda.cu  mpi.cc  threads.cc
